force-app/main/default/objects/Deal_Details__c/Deal_Details__c.object-meta.xml
<CustomObject>
    <label>Deal Details</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Detailss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>