force-app/main/default/objects/Deal_Details__c/fields/LED_Service_Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>LED_Service_Vendor_Phone__c</fullName>
    <label>LED Service Vendor Phone</label>
    <type>Phone</type>
</CustomField>