force-app/main/default/objects/Deal_Details__c/fields/Plasma_Panel_Code__c.field-meta.xml
<CustomField>
    <fullName>Plasma_Panel_Code__c</fullName>
    <label>Plasma Panel Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>