force-app/main/default/objects/Deal_Details__c/recordTypes/LCD.recordType-meta.xml
<RecordType>
    <fullName>LCD</fullName>
    <active>true</active>
    <label>LCD</label>
</RecordType>